--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
 </head>
 
 <body class="font-serif antialiased text-gray-900 bg-white"> 
-  <!--  -->
-
   <!-- Header -->
   <header class="fixed top-0 w-full z-50 bg-white shadow-md">
     <nav class="container mx-auto px-4 py-4 flex justify-between">
@@ -38,7 +36,6 @@
         <a href="index.html" class="text-2xl font-semibold link">Shaan Yadav</a>
       </div>
       <div>
-        <a href="#about" class="text-lg link">About</a>
         <a href="projects.html" class="text-lg ml-6 link">Projects</a>
         <a href="musings.html" class="text-lg ml-6 link">Random Things</a>
         <a href="resume.html" class="text-lg ml-6 link">Resume</a>
@@ -48,57 +45,72 @@
 
   <!-- Hero Section -->
   <section id="about" class="container mx-auto px-4 py-7 mt-20">
-      <div class="">
-        <h1 class="text-6xl font-bold">Hi, I'm Shaan.</h1>
-        <p class="mt-6 text-2xl">
-          I made this website to show a few projects I have worked on that I otherwise don't get to. 
-          
-          <br> <br>
+      <div class="flex items-start gap-4">
+        <div class="w-1/2">
+          <h1 class="text-6xl font-bold">Hi, I'm Shaan.</h1>
+          <p class="mt-6 text-2xl">
+            I made this website to show a few projects I have worked on that I otherwise don't get to. 
+            <br>
 
-          I'm currently an undergrad at Duke, interested in anything to do with hardware and chip design.
+            Currently an undergrad at Duke
+            <br>
+            Interested in hardware design and funny algorithms.
 
-          <br> <br>
+            <br>
 
-          <!-- A few projects that I've had time to write more about are on the <a class="link" href="projects.html"> <b>projects page</b></a>.
-          My Github and Youtube showcase a few cool projects as well. <br><br>
+            <!-- A few projects that I've had time to write more about are on the <a class="link" href="projects.html"> <b>projects page</b></a>.
+            My Github and Youtube showcase a few cool projects as well. <br><br>
 
-          You can find my resume <a class="link" href="resume.html"> <b> here</b></a>.  -->
+            You can find my resume <a class="link" href="resume.html"> <b> here</b></a>.  -->
 
-        </p>
+          </p>
 
-        <p class="text-xl">
-          <ul class="text-lg">
+        </div>
 
-            <li><a class="link" href="./musings.html"><b>» Random Things </b></a>
-              is a collection of projects I did that seemed somewhat interesting.
-            </li>
+        <!-- Profile Picture -->
+        <div class="w-48 h-48 rounded-full overflow-hidden flex-shrink-0 ml-auto">
+          <img src="https://ui-avatars.com/api/?name=Shaan+Yadav&size=200&background=random" alt="Shaan Yadav" class="w-full h-full object-cover">
+        </div>
 
-            <li><a class="link" href="./projects.html"><b>» Projects </b></a>
-                is a collection of projects that I've documented more formally (hope to document more soon).
-            </li>
-
-            <li><a class="link" href="./resume.html"><b>» Resume </b></a>
-                is a copy of my resume.
-            </li>
-
-            <li>
-              » My 
-              <a class="link" href="https://github.com/Shaan106"><b>Github </b></a>
-              and 
-              <a class="link" href="https://www.youtube.com/channel/UC5ODxBVQlb0qzFhBr1LJ4ug"><b>YouTube </b></a>
-              also showcase some things I've made.
-            </li>
-
-            <li>
-              » I also really like books and document my reading on 
-              <a class="link" href="https://www.goodreads.com/user/show/178092150-shaan"><b>Goodreads</b></a>.
-            </li>
-          </ul>
-        </p>
-
+        <!-- padding div-->
+        <div class="w-1/4"></div>
       </div>
     </section>
 
+
+  <!-- Website info section -->
+
+  <section class="container mx-auto px-4 py-0 pb-10 mb-10">
+    <p class="text-xl">
+      <ul class="text-lg">
+
+        <li><a class="link" href="./projects.html"><b>» Projects </b></a>
+          is a collection of projects that I've documented more formally (hope to document more soon).
+        </li>
+
+        <li><a class="link" href="./musings.html"><b>» Random Things </b></a>
+          is a collection of projects I did that seemed somewhat interesting.
+        </li>
+
+        <li><a class="link" href="./resume.html"><b>» Resume </b></a>
+            is a copy of my resume.
+        </li>
+
+        <li>
+          » My 
+          <a class="link" href="https://github.com/Shaan106"><b>Github </b></a>
+          and 
+          <a class="link" href="https://www.youtube.com/channel/UC5ODxBVQlb0qzFhBr1LJ4ug"><b>YouTube </b></a>
+          also showcase some things I've made.
+        </li>
+
+        <li>
+          » I also enjoy the odd book and document my reading on 
+          <a class="link" href="https://www.goodreads.com/user/show/178092150-shaan"><b>Goodreads</b></a>.
+        </li>
+      </ul>
+    </p>
+  </section>
 
   <!-- Links section -->
 
