--- a/projects/boids_fpga.html
+++ b/projects/boids_fpga.html
@@ -49,11 +49,11 @@
       <div class="w-2/3">
         <p class="mt-0 text-lg pt-0">
           <br>
-          The goal of this project was to build an efficient low level implementation of the Boid Algorithm - an algorithm that simulates the flocking behavior of birds, or organisms in general.
+          The goal of this project was to build an efficient low level implementation of the Boids Algorithm - an algorithm that simulates the flocking behavior of birds, or organisms in general.
           <br><br>
           The initial simulation was done in Python, where we showed the limitations we get when we try to simulate a large number of boids on a CPU-like architecture. We decided to create a hardware level implementation of this algorithm using Verilog and FPGAs to demonstrate that a much more efficient computational model is possible at the hardware level.
           <br><br>
-          An in detail writeup can be found on the github readme, but the general outline of the project can be seen below:
+          A detailed writeup can be found on the github readme, but the general outline of the project can be seen below:
           <br><br>
           <ul>
             <li class="text-xl">» High Level Simulations
