--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
       <br>
       I haven't included things I am currently working on.
       <br>
-      Below are links to the projects.
+      Below are links to the projects in chronological order.
     </p>
     
 
@@ -63,12 +63,13 @@
             </h2>
             <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
             <!-- for if I want to add a date below -->
-            <!-- <p class="text-gray-700">&nbsp 2024</p> -->
+            <p class="text-gray-700">&nbsp 2024</p>
           </div>
         </a>
         <div class="flex items-center mt-2">
           <p>A very fast and efficient hardware (verilog + FPGA) implementation of the boids flocking algorithm.</p>
           <div class="flex-grow border-t-2 border-white mr-4"></div>
+          <img src="assets/Boids_FPGA/boids_birds.jpg" alt="Boids FPGA Project" class="w-1/3 h-24 object-cover mr-4">
         </div>
       </div>
 
@@ -78,12 +79,13 @@
           <div class="flex items-center mt-1">
             <h2 class="text-3xl font-bold pt-4">⌘ Verilog_MIPS_CPU</h2>
             <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
-            <!-- <p class="text-gray-700">&nbsp 2022</p> -->
+            <p class="text-gray-700">&nbsp 2024</p>
           </div>
         </a>
         <div class="flex items-center mt-1">
           <p>A fully functioning 5 stage, pipelined, bypassed CPU made using Verilog from the ground up.</p>
           <div class="flex-grow border-t-2 border-white mr-4"></div>
+          <img src="assets/Verilog_MIPS_CPU/cpu_full.png" alt="MIPS CPU Project" class="w-1/3 h-24 object-cover mr-4">
         </div>
       </div>
 
@@ -93,27 +95,50 @@
           <div class="flex items-center mt-1">
             <h2 class="text-3xl font-bold pt-4">ꐠ Melanoma_Scan</h2>
             <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
-            <!-- <p class="text-gray-700">&nbsp 2022</p> -->
+            <p class="text-gray-700">&nbsp 2021-22</p>
           </div>
         </a>
         <div class="flex items-center mt-1">
-          <p>An ios app that can detect skin cancer, and provide important environmental and location based information for melanoma.</p>
+          <p>An ios app that can detect skin cancer, and provide important environmental and location 
+            <br>
+            based information for melanoma.</p>
           <div class="flex-grow border-t-2 border-white mr-4"></div>
+          <img src="assets/MelanomaScan/thumbnail.png" alt="Melanoma Scan Project" class="w-1/3 h-24 object-cover mr-4">
         </div>
       </div>
 
       <!-- Solar_Panel_Dust_Sensor -->
       <div id="solar_dust_link">
-        <a class="link" href="projects/solar_panel_dust.html">
+        <a class="link" href="solar_panel_dust.html">
           <div class="flex items-center mt-1">
             <h2 class="text-3xl font-bold pt-4">☼ Solar_Panel_Dust_Sensor</h2>
             <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
-            <!-- <p class="text-gray-700">&nbsp 2022</p> -->
+            <p class="text-gray-700">&nbsp 2022</p>
           </div>
         </a>
         <div class="flex items-center mt-1">
           <p>A cost-effective arduino project to detect dust on solar panels.</p>
           <div class="flex-grow border-t-2 border-white mr-4"></div>
+          <img src="assets/DustSensor/thumbnail.png" alt="Solar Panel Dust Sensor Project" class="w-1/3 h-24 object-cover mr-4">
+        </div>
+      </div>
+
+      <!-- TODO -->
+      <div id="projects_to_add">
+        <a class="link" href="">
+          <div class="flex items-center mt-5">
+            <h2 class="text-3xl font-bold pt-4">
+              ∆ Projects to add
+            </h2>
+            <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
+            <!-- for if I want to add a date below -->
+            <p class="text-gray-700">&nbsp 20??</p>
+          </div>
+        </a>
+        <div class="flex items-center mt-2">
+          <p>Yale BCI, Checker chip, SAT accelerator</p>
+          <div class="flex-grow border-t-2 border-white mr-4"></div>
+          <img src="" alt="placeholder" class="w-1/3 h-24 object-cover mr-4">
         </div>
       </div>
 
