--- a/musings.html
+++ b/musings.html
@@ -63,7 +63,7 @@
                         and for the final project ended up trying to deal with the NP-hard problem of SAT solving.
                     </p>
                     <p class="text-gray-700 mb-2">
-                        SAT solving is essentially figuring out if a given boolean formula is satisfiable (ie can we find some 
+                        <a href="https://en.wikipedia.org/wiki/SAT_solver" class="link"><u>SAT solving</u></a> is essentially figuring out if a given boolean formula is satisfiable (ie can we find some 
                         combination of assignments such as A=1, B=0, C=1, etc such that the formula is true). It is hard because 
                         there are exponentially many combinations to check. It is also very useful from mathematics to circuit testing to 
                         the design of new drugs.
