--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             Currently an undergrad at Duke
             <br>
-            Interested in hardware design and funny algorithms.
+            Interested in silicon, hardware and low level systems.
 
             <br>
 
