--- a/resume.html
+++ b/resume.html
@@ -43,9 +43,9 @@
   <section class="container mx-auto px-4 py-20">
     <div class="flex flex-col items-left">
       <h1 class="text-4xl font-bold">Resume</h1>
-      <p class="mt-6 text-xl mb-8">This was last updated on the <b>21st of September '24.</b></p>
+      <p class="mt-6 text-xl mb-8">This was last updated on the <b>9th of May '25.</b></p>
       <iframe
-      src="./assets/resumes/ShaanYadav_Sep24_Resume.pdf"
+      src="./assets/resumes/ShaanYadav_May25_Resume.pdf"
       frameborder="0"
       width="100%"
       style="height:100vh;" 
