--- a/index.html
+++ b/index.html
@@ -68,12 +68,15 @@
         </div>
 
         <!-- Profile Picture -->
-        <div class="w-48 h-48 rounded-full overflow-hidden flex-shrink-0 ml-auto">
-          <img src="https://ui-avatars.com/api/?name=Shaan+Yadav&size=200&background=random" alt="Shaan Yadav" class="w-full h-full object-cover">
+        <div class="w-48 h-72 rounded-full overflow-hidden flex-shrink-0 ml-auto">
+          <img src="assets/home/portrait.jpeg" alt="Shaan Yadav" class="w-full h-full object-cover">
         </div>
 
         <!-- padding div-->
-        <div class="w-1/4"></div>
+        <div class="w-1/4">
+
+
+        </div>
       </div>
     </section>
 
