--- a/projects.html
+++ b/projects.html
@@ -54,6 +54,32 @@
     <!-- LINKS TO PROJECTS SECTION -->
     <div id="link_wrapper"> 
 
+
+      <!-- Forsee -->
+      <div id="forsee_link">
+        <a class="link" href="projects/foresee_yale.html">
+          <div class="flex items-center mt-5">
+            <h2 class="text-3xl font-bold pt-4">
+              🝆 Foresee 
+            </h2>
+            <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
+            <!-- for if I want to add a date below -->
+            <p class="text-gray-700">&nbsp 2024-25</p>
+          </div>
+        </a>
+        <div class="flex items-center mt-2">
+          <p>
+            A Modular and Open Framework to Explore Integrated Processing on Brain-Computer Interfaces
+            <br>
+            Paper accepted at <a href="https://embc.embs.org/2025/" class="link" target="_blank" rel="noopener noreferrer"> <u>IEEE EMBC 2025</u></a>
+          </p>
+          <div class="flex-grow border-t-2 border-white mr-4"></div>
+          <img src="assets/Foresee/thumbnail.png" alt="Foresee Project" class="w-1/3 h-24 object-cover mr-4">
+        </div>
+      </div>
+
+
+
       <!-- Boids_FPGA -->
       <div id="boids_link">
         <a class="link" href="projects/boids_fpga.html">
@@ -85,7 +111,7 @@
         <div class="flex items-center mt-1">
           <p>A fully functioning 5 stage, pipelined, bypassed CPU made using Verilog from the ground up.</p>
           <div class="flex-grow border-t-2 border-white mr-4"></div>
-          <img src="assets/Verilog_MIPS_CPU/cpu_full.png" alt="MIPS CPU Project" class="w-1/3 h-24 object-cover mr-4">
+          <img src="assets/Verilog_MIPS_CPU/CPU_full.png" alt="MIPS CPU Project" class="w-1/3 h-24 object-cover mr-4">
         </div>
       </div>
 
@@ -128,7 +154,7 @@
         <a class="link" href="">
           <div class="flex items-center mt-5">
             <h2 class="text-3xl font-bold pt-4">
-              ∆ Projects to add
+              ♽ Projects to add
             </h2>
             <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
             <!-- for if I want to add a date below -->
