moving things around

--- a/projects/checkerPoster.html
+++ b/projects/checkerPoster.html
@@ -45,7 +45,7 @@
       <h1 class="text-4xl font-bold">Checker Chip Poster</h1>
       <p class="mt-6 text-xl mb-8">This was made during December '24. It contains preliminary research results</p>
       <iframe
-      src="./assets/CheckerChip/CheckerPoster.pdf"
+      src="../assets/CheckerChip/CheckerPoster.pdf"
       frameborder="0"
       width="100%"
       style="height:100vh;" 
