updates in things

--- a/musings.html
+++ b/musings.html
@@ -53,6 +53,34 @@
     <section class="container mx-auto px-4 mt-5">
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
+            <!-- Card 7, Post Silicon -->
+            <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col justify-between">
+                <img src="./assets/quaint_projects/apple_logo.svg" alt="Blog Image" class="w-full h-48 object-cover">
+                <div class="p-6 flex flex-col flex-grow">
+                    <h2 class="text-xl font-bold mb-2">Post-Silicon is surprisingly useful</h2>
+                    <p class="text-gray-700 mb-2">
+                        I spent this past summer working with Apple's GPU Post-Silicon Power & Performance team, 
+                        and I've been surprised by just how much you can do post-silicon to benefit power and performance charactersitics of some SoC.
+                    </p>
+                    <p class="text-gray-700 mb-2">
+                        I mainly worked on using post-silicon characteristics in clever ways to identify exact architectural and software bottlenecks in a GPU. 
+                        At first this seems near impossible because using voltage and current measurements naïvely the best you can do is identify lowest voltages for given frequencies. 
+                        However, I learnt over the summer that you can play clever tricks with manipulation of clocks, frequencies and GPU test code to isolate and identify bottlenecks - 
+                        none of which I would have been able to say was possible post-silicon before this summer.
+                    </p>
+                    <p class="text-gray-700 mb-2">
+                        Also, very pleasantly surprised by Apple - it is a very very good place to work, and the people are wonderful.
+                    </p>
+
+                    
+                    <p class="text-gray-500 text-sm mt-auto">Saturday, 16th August 2025</p>
+                    <a href="https://www.apple.com" class="link flex items-center text-sm">
+                        <i class="fab fa-github fa-sm"></i>
+                        <span class="text-sm">/<b>behind-big-nda</b></span>
+                    </a>
+                </div>
+            </div>
+
             <!-- Card 6, SAT solving -->
             <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col justify-between">
                 <img src="./assets/quaint_projects/SAT_solving.png" alt="Blog Image" class="w-full h-48 object-cover">
